--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <div>Привет аз съм Никола</div>
+    
+    <div>Обичам да карам скейтборд и да рисувам през свободното си време.Също така и да играя видео игри.</div>
 </body>
 </html>
