add links to my favorite content creator

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <div>Привет аз съм Никола</div>
     
     <div>Обичам да карам скейтборд и да рисувам през свободното си време.Също така и да играя видео игри.</div>
+
+    <div>Моят идол: https://youtu.be/uzsI6QXtkk4?si=C8n1y4KnTZwKbuMl
+        Бонус: https://youtu.be/UeivK30NyBU?si=cricZvKz_BeAE5fo
+    </div>
 </body>
 </html>
