add information about channel content

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <div>Моят идол: https://youtu.be/uzsI6QXtkk4?si=C8n1y4KnTZwKbuMl
         Бонус: https://youtu.be/UeivK30NyBU?si=cricZvKz_BeAE5fo
     </div>
+
+    <div>В моят канал ще караме скейтборд с Tony Hawk.През уикендите ще рисуваме с Bob Ross.</div>
 </body>
 </html>
