add price for content

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     </div>
 
     <div>В моят канал ще караме скейтборд с Tony Hawk.През уикендите ще рисуваме с Bob Ross.</div>
+
+    <div>Мога да направя 900 за 300 лева.</div>
 </body>
 </html>
